--- a/practice one/style/practice-one.css
+++ b/practice one/style/practice-one.css
@@ -52,10 +52,12 @@ header .header-three{
 
 
 main{
-    background-color: rgb(249, 249, 252);
+   background-color: rgb(228, 200, 247);
+    
     margin: 2%;
     padding: 2%;
     border: 4px solid rgb(82, 82, 152);
+    color: white;
     
 }
 main h1, h2, h3{
@@ -67,6 +69,7 @@ main h1, h2, h3{
 main .main{
     display: grid;
     grid-template-columns: 2fr 1fr;
+    grid-template-rows: 2fr 1fr;
     grid-gap: 2%;
 }
 .links a{
@@ -91,14 +94,30 @@ main .main .right-one .links a{
 
 main .main .right-one, .right-two{
     grid-column: 2/2;
+    
+    background-color: aliceblue;
+    color: black;
+
+}
+
+main .main .right-one, .right-two p{
+    padding: 4%;
 }
 
 .main .left{
     border-right: 2px solid rgb(49, 49, 133);
+    grid-row: 1/2;
+    justify-content: center;
+    align-items: center;
 }
 .main .left img{
     display: block;
-    font-size: 150%;
+    width: 90%;
+    height: 30%;
+    margin: 2%;
+    border-radius: 10%/10%;
+    border: 2px solid white;
+    
 }
 
 
