--- a/practice one/style/practice-one.css
+++ b/practice one/style/practice-one.css
@@ -31,28 +31,41 @@ header a:hover{
 }
 header .headers{
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-gap: 1%;
 }
 
 header .header-one{
     grid-column: 1/3;
-    width: 90%;
-    height: 100%; 
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+    justify-content: center;
+    align-items: center; 
     
 }
 header .header-two{
     grid-column: 3/5;
     border-right: 2px solid white;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 header .header-three{
-    grid-column: 6/6;
+    grid-column: 5;
     
+}
+.header-three{
+    display: grid;
+    text-align: center;
 }
 
 
 main{
-   background-color: rgb(228, 200, 247);
+   background-color: transparent;
     
     margin: 2%;
     padding: 2%;
@@ -134,6 +147,8 @@ footer .footer{
 .infos{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    
     
 }
 .footer .infos{
@@ -144,4 +159,6 @@ footer .footer{
     
     grid-row: 2/2;
     text-align: center;
+    padding: 2%;
+    background-color: black;
 }
